# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.642 2006/04/09 22:06:01 codeman Exp $

  9 Apr 2006; Preston Cody <codeman@gentoo.org>
  GLIMD: fix display problem with execute.pyhtml.
  make tables better.

  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIInstallProfile.py:
  fix handling of int/float for minor
  src/templates/x86ArchitectureTemplate.py:
  save/restore partition name
  src/GLIStorageDevice.py:
  support for partition name

  8 Apr 2006; Preston Cody <codeman@gentoo.org>
  touchups to add_profile in GLIMD to link to webgli
  add a save to GLIMD profile button in webgli's saveprofile
  gliserv.py:
  initial attempt at custom networking info per client.  hostname support only.

  5 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/webgli/partitioning[234].pyhtml:
  small fixes for new partioning code

  2 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  record PID of secondary thread

  1 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIGenDialog.py:
  small fix for new partitioning code

  30 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  add get_devnode()
  fix up detect_devices() to detect cciss/ida arrays
  src/templates/x86ArchitectureTemplate.py:
  use get_devnode() instead of figuring out the devnode
  skip first 3 steps if partition layout hasn't changed
  wipe disk and create new disklabel before recreating partitions
  src/GLIArchitectureTemplate.py:
  use get_devnode() in local mount and fstab stuff

  26 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  change detect_devices() to handle change in sysfs in 2.6.16 (from lxnay)

  25 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  continue breakup/cleanup of partitioning code
