@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.642 2006/04/09 22:06:01 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.643 2006/04/15 16:48:05 agaffney Exp $
+
+  15 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIInstallProfile.py:
+  change kernel-modules to not be so stupid
 
   9 Apr 2006; Preston Cody <codeman@gentoo.org>
   GLIMD: fix display problem with execute.pyhtml.
